--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,11 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   provider: ^5.0.0
+  firebase_core: ^1.2.1
+  firebase_database: ^7.1.0
+  firebase_auth: ^1.3.0
+  cloud_firestore: ^2.2.1
+  firebase_storage: ^10.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
