--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   firebase_auth: ^1.3.0
   cloud_firestore: ^2.2.1
   firebase_storage: ^10.0.3
-
+  mask_text_input_formatter: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
