--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_messaging: ^11.1.0
+  flutter_local_notifications: ^9.1.4
+  onesignal_flutter: ^3.2.7
 
 dev_dependencies:
   flutter_test:
